@@ -83,7 +83,7 @@ And obviously, you will need have Geany installed. If you have Geany installed
 from the sources, you should be ready to go.
 If you used a prepared package e.g. from your distribution you probably need
 to install an additional package, this might be called geany-dev or geany-devel.
-Please note that in order to compile and use this plugin, you need Geany 0.16
+Please note that in order to compile and use this plugin, you need Geany 0.21
 or later.
 
 Furthermore you need, of course, a C compiler and the Make tool.
