@@ -1,3 +1,8 @@
+2011-04-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * src/addons.c: Reload tasks on reload of document. Closing #3277842.
+
+
 2010-09-08  Nick Treleaven  <nmt@localhost.localdomain>
 
  * src/ao_tasks.c:
